--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "electron:dev": "concurrently \"cross-env BROWSER=none npm run dev\" \"wait-on http://localhost:5173 && electron .\"",
+    "electron": "electron .",
+    "start:dev": "npm run dev",
+    "start:electron": "electron .",
+    "electron:dev": "concurrently \"npm run dev\" \"timeout 5 && electron .\"",
     "electron:build": "npm run build && electron-builder",
     "preview": "vite preview"
   },
@@ -36,6 +39,7 @@
     "cross-env": "^7.0.3",
     "electron": "^24.3.0",
     "electron-builder": "^23.6.0",
+    "electron-squirrel-startup": "^1.0.1",
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.2",
     "vite": "^4.3.5",
